--- a/SMUARC.bib
+++ b/SMUARC.bib
@@ -339,7 +339,7 @@ ARC Library \#153},
 	year = {1988},
 	note = {Report prepared for Ned Burleson \& Associates, Fort Worth, Texas. Texas Antiquities Permit \#714.
 ARC Library \#201.},
-	keywords = {Denton County, Held in Trust Collection, Tarrant County, Texas},
+	keywords = {Texas, Denton County, Tarrant County, Held in Trust Collection},
 	annote = {Texas Antiquities Permit 714
 },
 }
@@ -393,7 +393,7 @@ The investigations of the 38 historical properties in the Richland/Chambers Rese
 	year = {1987},
 	note = {Texas Antiquities Permit \#312.
 ARC Library \#309},
-	keywords = {Freestone County, Held in Trust Collection, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County, Held in Trust Collection},
 }
 
 @book{mcgregor_hunter-gatherer_1987,
@@ -416,7 +416,7 @@ In Part Two, the results of the prehistoric site investigations are utilized to 
 	year = {1987},
 	note = {Texas Antiquities Permit \#312.
 ARC Library \#308},
-	keywords = {Freestone County, Held in Trust Collection, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County, Held in Trust Collection},
 }
 
 @techreport{martin_cultural_1987,
@@ -453,7 +453,7 @@ Few nonessential items were found.The results of all of these studies provide de
 	year = {1987},
 	note = {Texas Antiquities Permit \#312.
 ARC Library \#310},
-	keywords = {Freestone County, Held in Trust Collection, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County, Held in Trust Collection},
 	annote = {Texas Antiquities Permit 312
 },
 }
@@ -495,7 +495,7 @@ Finally, the geological research in and around the reservoir indicates that the 
 	year = {1987},
 	note = {Texas Antiquities Permit \#312.
 ARC Library \#306},
-	keywords = {Freestone County, Held in Trust Collection, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County, Held in Trust Collection},
 }
 
 @book{bruseth_bird_1987,
@@ -517,7 +517,7 @@ The final part of this volume discusses the Wylie focus concept. This construct 
 	year = {1987},
 	note = {Texas Antiquities Permit \#312.
 ARC Library \#307},
-	keywords = {Freestone County, Held in Trust Collection, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County, Held in Trust Collection},
 }
 
 @techreport{westbury_archaeological_1985,
@@ -530,7 +530,7 @@ ARC Library \#307},
 	year = {1985},
 	note = {Texas Antiquities Permit \#476. Dallas County Public Works Department.
 ARC Library \#199},
-	keywords = {Dallas County, Texas},
+	keywords = {Texas, Dallas County},
 	annote = {Texas Antiquities Permit 476
 },
 }
@@ -592,7 +592,7 @@ The following report represents an interim report originally conceived as a part
 	author = {Jurney, David H. and Lebo, Susan A. and Moir, Randall W. and Nunley, Mary Christopher and Raab, L. Mark and Westbury, William A. and Lee, Thomas Reed and Glaspy, Billie S. and Saunders, Joe W.},
 	year = {1983},
 	note = {Texas Antiquities Permit \#312.  Prepared for Tarrant County Water Control and Improvement District 1},
-	keywords = {Freestone County, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County},
 }
 
 @techreport{richner_tennessee_1982,
@@ -690,7 +690,7 @@ Review of the historical pattern of change indicated that as land use changed fr
 	year = {1978},
 	note = {Texas Antiquities Permit \#174.  Prepared for the Department of Urban Planning, City of Dallas.
 ARC Library \#111},
-	keywords = {Dallas County, Held in Trust Collection, Texas},
+	keywords = {Texas, Dallas County, Held in Trust Collection},
 	annote = {No Original on File
 },
 	annote = {Texas Antiquities Permit 174
@@ -1012,7 +1012,7 @@ Conclusive evidence was found indicating that the company streets are in most ca
 	note = {Texas Antiquities Permit \#125.  Fort Concho Museum, City of San Angelo Contract No. 38-2961
 ARC Library \#98
 ISBN: 0-89643-099-5},
-	keywords = {Held in Trust Collection, Texas, Tom Green County},
+	keywords = {Texas, Tom Green County, Held in Trust Collection},
 	annote = {Fort Concho Museum, City of San Angelo Contract No. 38-2961
 },
 }
@@ -2399,7 +2399,9 @@ ARC Library \#169},
 	address = {Austin, Texas},
 	series = {Archaeological {Report}},
 	title = {Historical {Archeology} of the {Neches} {Saline}, {Smith} {County}, {Texas}},
+	isbn = {0-89643-012-X},
 	shorttitle = {Historical {Archeology} of the {Neches} {Saline}},
+	url = {https://core.tdar.org/document/75671/historical-archeology-of-the-neches-saline-smith-county-texas},
 	abstract = {The Neches Saline is the location of a commercial salt manufacturing operation which was in business during the period 1820-1870. During the Civi I War, salt was mass-produced at the saline in order to supply salt to the Trans-Mississippi Department of the ConfederateStates of America. Archeological investigation of the nineteenth-century salt furnaces which were used at the saline was carried out in1969 by Southern Methodist University prior to the raising of the level of Lake Palestine Reservoir. Eight furnace locations and ten furnaces were recorded during the survey of the saline. Excavation at the Emerald Bay site revealed the internal structure of a salt furnace as well as a series of later modifications. The place of the Neches Saline in the economy of the Trans-Mississippi South is discussed, and recommendations for modification of current research design are presented.},
 	number = {21},
 	publisher = {Texas Historical Commission},
@@ -2407,8 +2409,7 @@ ARC Library \#169},
 	month = aug,
 	year = {1971},
 	note = {Research Report 12
-ARC Library \#12
-ISBN: 0-89643-012-X},
+ARC Library \#12},
 	keywords = {Texas, Smith County},
 }
 
@@ -2880,7 +2881,7 @@ ARC Library \#354},
 	year = {1982},
 	note = {Texas Antiquities Permit \#263.
 ARC Library \#319},
-	keywords = {Freestone County, Held in Trust Collection, Navarro County, Richland-Chambers Reservoir, Texas},
+	keywords = {Texas, Navarro County, Richland-Chambers Reservoir, Freestone County, Held in Trust Collection},
 }
 
 @book{mobley_archaeological_1978,
@@ -3068,7 +3069,7 @@ ARC Library \#202},
 	note = {Texas Antiquities Permit \#168. Sabine River Authority contract 5-28303.
 ARC Library \#120 or \#196 - Excel spreadsheet is conflicted
 Research Report 120},
-	keywords = {Held in Trust Collection, Hopkins County, Lake Fork Reservoir, Rains County, Texas, Wood County},
+	keywords = {Texas, Rains County, Hopkins County, Wood County, Lake Fork Reservoir, Held in Trust Collection},
 	annote = {Sabine River Authority contract 5-28303.
 },
 	annote = {Texas Antiquities Permit 168
@@ -3179,7 +3180,7 @@ ARC Library \#75},
 	note = {Texas Antiquities Permit \#61.  Titus County Fresh Water Supply District 1, Contract 86-56.
 ARC Library \#99
 ISBN: 0-89643-098-7},
-	keywords = {Camp County, Franklin County, Held in Trust Collection, Lake Bob Sandlin, Texas, Titus County},
+	keywords = {Texas, Titus County, Franklin County, Camp County, Held in Trust Collection, Lake Bob Sandlin},
 }
 
 @techreport{doehner_evaluation_1978,
@@ -3352,8 +3353,9 @@ ARC Library \#174},
 	collaborator = {Dirkmaat, Dennis C. and Dorward, Donald and Green, Melissa M. and Kubas, Cassandra and McElhaney, Jackie and Moir, Randall W. and Payton, Donald and Pedler, Catherine L. and Yates, Bonnie C.},
 	year = {1994},
 	note = {Texas Antiquities Permits \#671 and \#671-A.
-ARC Library \#176},
-	keywords = {Dallas County, Texas},
+ARC Library \#176
+NADB: 852393},
+	keywords = {Texas, Dallas County},
 	annote = {Prepared for Southern Methodist University and the Dallas County Historical Foundation
 },
 	annote = {Work started on this project under the ARP, and SMU retains the artifacts.
@@ -3417,7 +3419,7 @@ Nine backhoe trenches and 236 shovel test units were excavated. The pedestrian r
 	month = aug,
 	year = {1992},
 	note = {Texas Antiquities Permit \#693. Prepared for Dallas Parks and Recreation Department},
-	keywords = {Dallas County, Held in Trust Collection, Texas},
+	keywords = {Texas, Dallas County, Held in Trust Collection},
 	annote = {No physical copy in the ARC.  Scan obtained from copy in Fondren Library.
 },
 }
@@ -3426,6 +3428,7 @@ Nine backhoe trenches and 236 shovel test units were excavated. The pedestrian r
 	address = {Dallas, Texas},
 	series = {Contributions in {Anthropology}},
 	title = {The {Archaeological} {Resources} in the {Lake} {Monticello} {Area} of {Titus} {County}, {Texas}},
+	url = {https://core.tdar.org/document/447055/the-archaeological-resources-in-the-lake-monticello-area-of-titus-county-texas},
 	language = {English},
 	number = {8},
 	publisher = {Department of Anthropology, Southern Methodist University},
@@ -3450,7 +3453,7 @@ Occupation of the reservoir spans the Archaic (3500 B.C. to A.D. 500), Neo-Ameri
 	note = {Texas Antiquities Permit \#85.  Report prepared for the Sabine River Authority.  Project No. 86-54, Proposal No. 42681.
 ARC Library \#87
 ISBN: 0-89643-087-1},
-	keywords = {Held in Trust Collection, Hopkins County, Lake Fork Reservoir, Rains County, Texas, Wood County},
+	keywords = {Texas, Rains County, Hopkins County, Wood County, Lake Fork Reservoir, Held in Trust Collection},
 	annote = {Only one copy present in ARC.  Scan produced from typesetter’s pasteup.
 },
 }
@@ -3470,33 +3473,6 @@ ARC Library \# 356},
 	keywords = {New Mexico, Los Esteros Reservoir, Guadalupe County, U.S. Army Corps of Engineers, San Miguel County},
 	annote = {Only one copy in the ARC
 },
-}
-
-@techreport{skinner_archaeological_1999,
-	address = {Dallas, Texas},
-	type = {Cultural {Resources} {Report}},
-	title = {Archaeological survey of the {Wagon} {Wheel} {Park} {Site}, {Coppell}, {Texas}},
-	number = {99-33},
-	institution = {AR Consultants, Inc.},
-	author = {Skinner, S. Alan},
-	month = jul,
-	year = {1999},
-	note = {Texas Antiquities Permit \#2190.},
-	keywords = {AR Consultants, Dallas County, Held in Trust Collection, NO COPY AT ARC, Texas},
-	annote = {No Copy On File
-},
-}
-
-@techreport{skinner_prehistoric_2000,
-	address = {Dallas, Texas},
-	type = {Cultural {Resources} {Report}},
-	title = {Prehistoric {Occupation} of {Mine} {Creek} in the {Catfish} {Creek} {Watershed}, {Henderson} {County}, {Texas}},
-	number = {2000-30},
-	institution = {AR Consultants, Inc.},
-	author = {Skinner, S. Alan},
-	year = {2000},
-	note = {ARC Library \#299},
-	keywords = {Texas, Henderson County, Held in Trust Collection, AR Consultants},
 }
 
 @techreport{shiner_survey_1979,
@@ -3520,7 +3496,7 @@ ARC Library \# 356},
 	month = may,
 	year = {1983},
 	note = {Texas Antiquities Permit \#353.},
-	keywords = {Held in Trust Collection, NO COPY AT ARC, Tarrant County, Texas},
+	keywords = {Texas, Tarrant County, NO COPY AT ARC, Held in Trust Collection},
 	annote = {No physical copy at SMU
 },
 }
@@ -3534,7 +3510,7 @@ ARC Library \# 356},
 	year = {1983},
 	note = {Texas Antiquities Permit \#369.
 ARC Library \#198},
-	keywords = {Big Creek Reservoir, Delta County, Held in Trust Collection, Texas},
+	keywords = {Texas, Delta County, Held in Trust Collection, Big Creek Reservoir},
 	annote = {No original on file at SMU.  ARC only has photocopies of the original letter.
 },
 }
@@ -3560,7 +3536,7 @@ ARC Library \#198},
 	author = {Seebach, John},
 	year = {2003},
 	note = {Included in the QUEST Annual Report for 2003.  Texas Antiquities Permit \#2860.},
-	keywords = {Culberson County, Held in Trust Collection, QUEST, Texas},
+	keywords = {Texas, Culberson County, Held in Trust Collection, QUEST},
 }
 
 @phdthesis{seebach_despoblado_2011,
@@ -3572,7 +3548,7 @@ ARC Library \#198},
 	month = may,
 	year = {2011},
 	note = {Texas Antiquities Permit \#2860},
-	keywords = {Held in Trust Collection, QUEST, Texas},
+	keywords = {Texas, Held in Trust Collection, QUEST},
 }
 
 @techreport{skinner_archaeological_1968,
@@ -3658,13 +3634,15 @@ ISBN: 0-89643-047-2},
 @techreport{lorrain_lower_1968,
 	address = {Dallas, Texas},
 	title = {The {Lower} {Rockwall} {Site}, {Rockwall} {County}, {Texas}},
+	url = {https://core.tdar.org/document/153315/lower-rockwall-site-rockwall-county-texas},
 	institution = {River Basin Salvage Project, Department of Anthropology, Southern Methodist University},
 	author = {Lorrain, Dessamae and Hoffrichter, Norma},
 	collaborator = {Butler, Barbara H.},
 	month = feb,
 	year = {1968},
 	note = {Report submitted to the National Park Service by the Salvage Project of Southern Methodist University
-Contract 14-10-0333-1550},
+Contract 14-10-0333-1550
+NADB: 2145566},
 	keywords = {Texas, Rockwall County},
 }
 
@@ -3704,7 +3682,7 @@ Data gathered during the investigations supported some aspects of the model, but
 	school = {Southern Methodist University},
 	author = {Gilmore, Kathleen Kirk},
 	year = {1968},
-	keywords = {River Basin Salvage Program, Texas, Louisiana, Sabine Parish, DeSoto Parish, Sabine County, Shelby County, Panola County, Toledo Bend Reservoir, Newton County, Dissertation},
+	keywords = {Texas, Milam County, Thesis},
 	annote = {Published in 1969 as State Building Commission Archeological Program Report 16
 },
 }
@@ -3912,6 +3890,7 @@ Texas Antiquities Permit \#75},
 	series = {Cultural {Resources} {Report}},
 	title = {Archaeological {Investigations} of the {South} {Oak} {Cliff} {Line} and {DART} {Cultural} {Resources} {Management}; {Volume} 1},
 	volume = {1},
+	url = {https://core.tdar.org/document/353939/archaeological-investigations-of-the-south-oak-cliff-line-and-dart-cultural-resources-management-vol-iii},
 	number = {95-1},
 	publisher = {AR Consultants, Inc.},
 	author = {Skinner, S. Alan and Whorton, Brenda B. and Trask, Lance K. and Scott, Robert and Caran, S. Chris and Dillon, Jeremy S.},
@@ -3919,8 +3898,9 @@ Texas Antiquities Permit \#75},
 	year = {1996},
 	note = {Submitted to Dallas Area Rapid Transit.
 Texas Antiquities Permit \#1443
-Replaces Texas Antiquities Permit \#625},
-	keywords = {AR Consultants, Dallas County, DART, Held in Trust Collection, Texas},
+Replaces Texas Antiquities Permit \#625
+NADB: 853205},
+	keywords = {Texas, Dallas County, DART, Held in Trust Collection, AR Consultants},
 }
 
 @book{skinner_archaeological_1996-1,
@@ -3928,6 +3908,7 @@ Replaces Texas Antiquities Permit \#625},
 	series = {Cultural {Resources} {Report}},
 	title = {Archaeological {Investigations} of the {South} {Oak} {Cliff} {Line} and {DART} {Cultural} {Resources} {Management}; {Volume} 2},
 	volume = {2},
+	url = {https://core.tdar.org/document/353939/archaeological-investigations-of-the-south-oak-cliff-line-and-dart-cultural-resources-management-vol-iii},
 	number = {95-1},
 	publisher = {AR Consultants, Inc.},
 	author = {Skinner, S. Alan and Archaeology Research Program},
@@ -3935,8 +3916,9 @@ Replaces Texas Antiquities Permit \#625},
 	year = {1996},
 	note = {Submitted to Dallas Area Rapid Transit.
 Texas Antiquities Permit \#1443
-Replaces Texas Antiquities Permit \#625},
-	keywords = {AR Consultants, Dallas County, DART, Held in Trust Collection, Texas},
+Replaces Texas Antiquities Permit \#625
+NADB: 853205},
+	keywords = {Texas, Dallas County, DART, Held in Trust Collection, AR Consultants},
 }
 
 @techreport{raab_archaeological_1983,
@@ -4002,12 +3984,14 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 @techreport{green_archaeological_1994,
 	address = {Dallas, Texas},
 	title = {Archaeological {Testing} at {Grapevine} {Springs} {Park} ({41DL329}), {Dallas} {County}, {Texas}},
+	url = {https://core.tdar.org/document/315843/archeological-testing-at-grapevine-springs-park-41dl329-dallas-county-texas},
 	language = {English},
 	institution = {Dallas Archaeological Society},
 	author = {Green, Melissa M. and Lorrain, Jan and Lorrain, Paul},
 	year = {1994},
-	note = {Submitted to Dallas County Park and Open Space Program. Texas Antiquities Permit \#1095.},
-	keywords = {Dallas, Dallas County, Held in Trust Collection, Texas},
+	note = {Submitted to Dallas County Park and Open Space Program. Texas Antiquities Permit \#1095.
+NADB: 853579},
+	keywords = {Texas, Dallas County, Held in Trust Collection, Dallas},
 	pages = {37},
 	annote = {Not an SMU/ARP report.
 },
@@ -4030,6 +4014,7 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 	address = {Dallas, Texas},
 	title = {An {Archaeological} {Survey} of {Fox} {Hollow} {Park} in the {Mountain} {Creek} {Development}, {Dallas} {County} {Texas}},
 	language = {English},
+	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Westbury, William A.},
 	month = apr,
 	year = {1989},
@@ -4044,6 +4029,7 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 	address = {Dallas, Texas},
 	title = {An {Archaeological} {Survey} of the {West} {Tawakoni} {Pipeline}, {Hunt} {County}, {Texas}},
 	language = {English},
+	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Westbury, William A.},
 	month = mar,
 	year = {1988},
@@ -4058,6 +4044,7 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 	address = {Dallas, Texas},
 	title = {An {Archaeological} {Survey} of a {Road} through the {Little} {Bethel} {Cemetery}, {Dallas} {County}, {Texas}},
 	language = {English},
+	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Westbury, William A.},
 	month = may,
 	year = {1988},
@@ -4071,6 +4058,7 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 @techreport{westbury_archaeological_1986,
 	address = {Dallas, Texas},
 	title = {An {Archaeological} {Survey} of the {Waxahachie}-{Midlothian} {Airport}},
+	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Westbury, William A.},
 	year = {1986},
 	note = {Submitted to Charles Willis and Associates and the Texas Historical Commission},
@@ -4082,6 +4070,7 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 @techreport{peter_archeological_2000,
 	address = {Plano},
 	title = {An {Archeological} and {Osteological} {Investigation} of {41DL373}, {Spring} {Creek} {Park} {Preserve}, {Dallas} {County}, {Texas}},
+	url = {https://core.tdar.org/document/316086/an-archeological-and-osteological-investigation-of-41dl373-spring-creek-park-preserve-dallas-county-texas},
 	language = {English},
 	number = {186},
 	institution = {Geo-Marine, Inc.},
@@ -4089,7 +4078,8 @@ Neither site is significant as defined by the criteria of eligibility for inclus
 	month = mar,
 	year = {2000},
 	note = {Prepared for Dallas County Parks and Open Spaces Program, Dallas, Texas.
-Texas Antiquities Permit \#1674},
+Texas Antiquities Permit \#1674
+NADB: 854289},
 	keywords = {Texas, Dallas County, Held in Trust Collection, Dallas},
 	annote = {Sue Linder-Linsley served as PI for this project.
 },
@@ -4281,7 +4271,7 @@ Report prepared for the U.S. Army Corps of Engineers, Fort Worth District. Contr
 	author = {Westbury, William A.},
 	year = {1985},
 	note = {Texas Antiquities Permit \#471. City of Plano, Texas},
-	keywords = {Collin County, Held in Trust Collection, Texas},
+	keywords = {Texas, Collin County, Held in Trust Collection},
 	annote = {No original file at ARC.  Fondren Library has copy.
 },
 }
@@ -4349,6 +4339,7 @@ Report prepared for the U.S. Army Corps of Engineers, Fort Worth District. Contr
 @techreport{lorrain_archeological_1972,
 	address = {Austin, Texas},
 	title = {Archeological {Investigations} at {Fort} {Richardson} {State} {Historic} {Site}, {Jack} {County}, {Texas}},
+	url = {https://core.tdar.org/document/339813/archeological-investigations-at-fort-richardson-state-historic-site-jack-county-texas},
 	language = {English},
 	number = {Research Report 10},
 	institution = {Texas Archeological Salvage Project, The University of Texas at Austin},
@@ -4416,6 +4407,7 @@ Report prepared for the U.S. Army Corps of Engineers, Fort Worth District. Contr
 	school = {Southern Methodist University},
 	author = {Levine, Frances},
 	year = {1980},
+	keywords = {New Mexico, Los Esteros Reservoir, Guadalupe County},
 }
 
 @phdthesis{nunley_sociocultural_1971,
@@ -4475,4 +4467,15 @@ Report prepared for the U.S. Army Corps of Engineers, Fort Worth District. Contr
 	year = {1982},
 	note = {Prepared for the Texas Archaeological Foundation.},
 	keywords = {Texas, Val Verde County},
+}
+
+@techreport{moir_capitol_1990,
+	address = {Dallas, Texas},
+	title = {Capitol {Project} {Archaeological} {Resources} {Popular} {Report}},
+	language = {English},
+	institution = {Archaeology Research Program, Southern Methodist University},
+	author = {Moir, Randall W. and Freuden, Charles M. and Jurney, David H.},
+	year = {1990},
+	note = {Texas Antiquities Permits \#833},
+	keywords = {Texas, Travis County},
 }
