--- a/SMUARC.bib
+++ b/SMUARC.bib
@@ -3527,30 +3527,6 @@ ARC Library \#198},
 },
 }
 
-@techreport{seebach_field_2003,
-	address = {Dallas, Texas},
-	type = {Report},
-	title = {Field {Research} in 2002 at the {Chispa} {Creek} {Site} ({41CU314}/315), {Culberson} {County}, {Texas}},
-	number = {2},
-	institution = {Department of Anthropology, Southern Methodist University},
-	author = {Seebach, John},
-	year = {2003},
-	note = {Included in the QUEST Annual Report for 2003.  Texas Antiquities Permit \#2860.},
-	keywords = {Texas, Culberson County, Held in Trust Collection, QUEST},
-}
-
-@phdthesis{seebach_despoblado_2011,
-	address = {Dallas, Texas},
-	type = {Unpublished {Ph}.{D}. dissertation},
-	title = {El {Despoblado}: {Folsom} and {Late} {Paleoindian} {Occupation} of {Trans}-{Pecos}, {Texas}},
-	school = {Southern Methodist University},
-	author = {Seebach, John},
-	month = may,
-	year = {2011},
-	note = {Texas Antiquities Permit \#2860},
-	keywords = {Texas, Held in Trust Collection, QUEST},
-}
-
 @techreport{skinner_archaeological_1968,
 	address = {Dallas, Texas},
 	type = {Research {Report}},
@@ -4067,24 +4043,6 @@ NADB: 853579},
 },
 }
 
-@techreport{peter_archeological_2000,
-	address = {Plano},
-	title = {An {Archeological} and {Osteological} {Investigation} of {41DL373}, {Spring} {Creek} {Park} {Preserve}, {Dallas} {County}, {Texas}},
-	url = {https://core.tdar.org/document/316086/an-archeological-and-osteological-investigation-of-41dl373-spring-creek-park-preserve-dallas-county-texas},
-	language = {English},
-	number = {186},
-	institution = {Geo-Marine, Inc.},
-	author = {Peter, Duane E. and Clow, Victoria G.},
-	month = mar,
-	year = {2000},
-	note = {Prepared for Dallas County Parks and Open Spaces Program, Dallas, Texas.
-Texas Antiquities Permit \#1674
-NADB: 854289},
-	keywords = {Texas, Dallas County, Held in Trust Collection, Dallas},
-	annote = {Sue Linder-Linsley served as PI for this project.
-},
-}
-
 @techreport{raab_kirbyville_1982,
 	address = {Dallas, Texas},
 	title = {Kirbyville, {Texas} {Flood} {Protection} {Project}; {Jasper} and {Newton} {Counties}, {Texas}; {Cultural} {Resource} {Reconnaissance}},
@@ -4467,6 +4425,18 @@ Report prepared for the U.S. Army Corps of Engineers, Fort Worth District. Contr
 	year = {1982},
 	note = {Prepared for the Texas Archaeological Foundation.},
 	keywords = {Texas, Val Verde County},
+}
+
+@techreport{westbury_archaeological_1988-2,
+	address = {[Dallas, Texas]},
+	title = {An {Archaeological} {Survey} of {Briarwood} {Park}, {Dallas} {County}, {Texas}},
+	abstract = {A pedestrian archaeological survey, with random shovel testing, was made of approximately fifteen acres of land within the Briarwood Park housing development.  No sites were found.},
+	language = {English},
+	author = {Westbury, William A.},
+	year = {1988},
+	note = {Prepared for the City of DeSoto, Dallas County, Texas.
+Texas Antiquities Permit \#679.},
+	keywords = {Dallas County, Held in Trust Collection, Texas},
 }
 
 @techreport{moir_capitol_1990,
